<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/barberpozadina">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/bkgroundpicture"
        android:gravity="center"
        app:srcCompat="@drawable/logobarber" />

    <TextView
        android:id="@+id/txt_skip"
        android:layout_width="wrap_content"
        android:layout_height="72dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"


        android:layout_centerHorizontal="true"
        android:fontFamily="More Fonts..."
        android:text="@string/just_skip"
        android:textColor="@android:color/background_light"
        android:textSize="28sp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="72dp"
        android:text="@string/login"
        android:id="@+id/login_btn"
        android:background="@color/loginbtn"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:layout_above="@+id/txt_skip"/>


</RelativeLayout>